--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,3 +119,19 @@
   font-weight: bold;
   animation: blink 0.9s infinite; 
 }
+
+@keyframes zoom {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.animate-zoom {
+  animation: zoom 10s infinite ease-in-out;
+}
